$Id: ChangeLog,v 1.29 2007-08-09 00:00:16 cmatsuoka Exp $

Stable versions
---------------

2.2.0 ()
	- added more module format specs
	- added CD61 Octalyser module support
	- added Flextrax FLX module detection
	- added Real Tracker module loader
	- added TCB Tracker module loader
	- added portable, 64bit safe MMD0/1/2/3 MED loader
	- enabled WAV writer
	- removed broken shared lib generation
	- removed packed structures anymore
	- fixed long-standing bug in S3M BPM handling, "Panic" plays correctly
	- fixed issues with OpenBSD
	- fixed issues with 64-bit machines
	- using Asle's Prowizard to handle packed MODs

2.1.1 (unreleased)
	- added more module format specs
	- added MO3 unpacking support
	- added file detection to the XMMS plugin
	- added Beep Media Player support to the XMMS plugin
	- added Epic Megagames PSM module support
	- added Epic Megagames old PSM (Silverball) module support
	- added DSMI/DMP Advanced Module Format support
	- added support to Ultimate Soundtracker modules
	- added ALSA 0.9/1.0 sound output support
	- fixed recursive decrunching of module files
	- fixed QNX6 portability issues (by Mike Gorchak)
	- fixed heavy memory leak in the XMMS plugin
	- fixed --time command-line parameter
	- fixed portamento-after-keyoff bug (Jeronen Tel's "Nine One One"
	  now plays correctly)
	- fixed IFF file loading to avoid data alignment errors
	- fixed endianism issues in MDL loader
	- updated OPL emulation (by Mike Gorchak)
	- default verbosity level changed to 1
	- default sound mode set to stereo
	- disabled MED loader (nonportable, didn't work well)

2.1.0 (unreleased)
	- Added Takuya Ooura's FFT code
	- Added scope/spectrum analyser modes to xxmp
	- Fixed dynamic driver loading to honour the configuration prefix
	- Added --with-esd option to the configuration script for esd in
	  FreeBSD (reported by Nate Dannenberg <natedac@kscable.com>)
	- Added xxmp panel and module info to XMMS info box
	- Fixed YM3812 emulator output in mono and stereo modes